--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,12 @@
 ﻿<!--pages/home/home.wxml-->
-<text>Hello World!</text>
-<button size="mini">按钮</button>
-<view >知识点2</view>
+
+<!-- 数据绑定 {{}} Mustache -->
+<view>{{name}}</view>
+<view>我的年龄{{age}}</view>
+
+<!-- 列表展示 wx:for -->
+<view wx:for="{{students}}">{{item.name}}</view>
+
+<!-- 事件监听改变data -->
+<view>当前计数：{{counter}}</view>
+<button size="mini" bindtap="handleBtnClick">+</button>
